2010-01-21  Philippe Normand  <pnormand@igalia.com>

        Rubber-stamped by Eric Carlson.

        Start the test when the video element loads, which is less prone
        to occasional cases where document.load is fired after video.load.

        * media/video-source-error-no-candidate.html:
        * media/video-source-error-no-candidate-expected.txt:

2010-01-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler.

        Intermittent crash when media element is adopted by another document
        https://bugs.webkit.org/show_bug.cgi?id=33919
        rdar://problem/7557527

        This test does not always crash the un-patched version of WebKit because
        the crash is so timing-dependant.

        * media/adopt-node-crash-expected.txt: Added.
        * media/adopt-node-crash.html: Added.

2010-01-21  Simon Hausmann  <simon.hausmann@nokia.com>

        No review, rolling out 53615 as it causes two
        crashes on the bot.

        * platform/qt/Skipped:

2010-01-21  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Simon Hausmann.

        Qt DRT: respect window.close() and window.closed()

        Qt DRT needs to maintain a correct count of open windows
        for windowCount(). It also needs to delete windows that
        have been closed by window.close().

        This fixes the following tests:

        plugins/destroy-during-npp-new.html
        fast/dom/Document/early-document-access.html
        fast/dom/Window/window-early-properties.html
        fast/events/open-window-from-another-frame.html
        fast/events/popup-blocking-click-in-iframe.html

        https://bugs.webkit.org/show_bug.cgi?id=32953

        * platform/qt/Skipped:

2010-01-20  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [Gtk] media/video-currentTime-set.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33897

        Refactored the test to use the "seeked" event.
