@@ -1,3 +1,12 @@
+2010-01-21  Diego Gonzalez  <diego.gonzalez@openbossa.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] add setDomainRelaxationForbiddenForURLScheme in Qt DRT
+        https://bugs.webkit.org/show_bug.cgi?id=33945
+
+        * platform/qt/Skipped:
+
 2010-01-21  Philippe Normand  <pnormand@igalia.com>
 
         Rubber-stamped by Eric Carlson.
